Simplier test, Makefile

--- a/js/test/browser/index.html
+++ b/js/test/browser/index.html
@@ -1,6 +1,6 @@
-<script src="../../dist/libshine.js"></script>
+<script src="libshine.js"></script>
 <script src="encode.js"></script>
-<script src="../lib/rounds.js"></script>
+<script src="rounds.js"></script>
 <script>
   var log = function (msg) {
     var el = document.getElementById("output");
