--- a/js/test/browser/index.html
+++ b/js/test/browser/index.html
@@ -1,4 +1,4 @@
-<script src="libshine.js"></script>
+<script src="libshine_node.js"></script>
 <script src="encode.js"></script>
 <script src="rounds.js"></script>
 <script>
@@ -16,6 +16,7 @@
           link.download = "encoded.mp3";
         }
 
+        log("");
         runRoundsTest(Shine, log);
       });
     });
